--- a/Shellhack/Shellhack/Storyboards/Newpost.storyboard
+++ b/Shellhack/Shellhack/Storyboards/Newpost.storyboard
@@ -55,6 +55,13 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z1l-dj-tRR">
+                                <rect key="frame" x="0.0" y="88" width="414" height="8"/>
+                                <color key="backgroundColor" red="0.29421918429999999" green="0.51906615710000004" blue="0.81884246510000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="8" id="7IF-w9-5XS"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cAd-hm-AUE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -62,13 +69,16 @@
                             <constraint firstItem="cAd-hm-AUE" firstAttribute="trailing" secondItem="G2o-sy-ih2" secondAttribute="trailing" constant="20" id="4sH-9T-vYQ"/>
                             <constraint firstItem="G2o-sy-ih2" firstAttribute="top" secondItem="Wa8-My-Be7" secondAttribute="bottom" constant="10" id="Eq4-8B-o9z"/>
                             <constraint firstItem="Wa8-My-Be7" firstAttribute="leading" secondItem="cAd-hm-AUE" secondAttribute="leading" constant="20" id="JDb-Hz-AEP"/>
+                            <constraint firstItem="cAd-hm-AUE" firstAttribute="trailing" secondItem="z1l-dj-tRR" secondAttribute="trailing" id="Lvq-Ax-Rgt"/>
                             <constraint firstItem="Wsy-ym-a12" firstAttribute="top" secondItem="G2o-sy-ih2" secondAttribute="bottom" constant="100" id="OST-4Y-KlL"/>
                             <constraint firstItem="dGj-2E-fad" firstAttribute="leading" secondItem="cAd-hm-AUE" secondAttribute="leading" constant="20" id="Zow-hW-YQy"/>
                             <constraint firstItem="cAd-hm-AUE" firstAttribute="trailing" secondItem="dGj-2E-fad" secondAttribute="trailing" constant="20" id="g6r-Ln-vUW"/>
+                            <constraint firstItem="z1l-dj-tRR" firstAttribute="leading" secondItem="TEa-Mt-dse" secondAttribute="leading" id="mqw-Mq-2zc"/>
                             <constraint firstItem="cAd-hm-AUE" firstAttribute="bottom" secondItem="Wsy-ym-a12" secondAttribute="bottom" constant="50" id="mxu-2h-dC5"/>
                             <constraint firstItem="Wa8-My-Be7" firstAttribute="top" secondItem="dGj-2E-fad" secondAttribute="bottom" constant="20" id="oIE-PV-CeQ"/>
                             <constraint firstItem="BXf-vs-23V" firstAttribute="top" secondItem="cAd-hm-AUE" secondAttribute="top" constant="20" id="sxt-GO-IdS"/>
                             <constraint firstItem="G2o-sy-ih2" firstAttribute="leading" secondItem="cAd-hm-AUE" secondAttribute="leading" constant="20" id="tWl-gi-Rl3"/>
+                            <constraint firstItem="z1l-dj-tRR" firstAttribute="top" secondItem="cAd-hm-AUE" secondAttribute="top" id="uIY-WQ-kQF"/>
                             <constraint firstItem="BXf-vs-23V" firstAttribute="leading" secondItem="cAd-hm-AUE" secondAttribute="leading" constant="20" id="wLn-kb-8cL"/>
                             <constraint firstItem="Wsy-ym-a12" firstAttribute="centerX" secondItem="TEa-Mt-dse" secondAttribute="centerX" id="xTq-4J-1fG"/>
                             <constraint firstItem="dGj-2E-fad" firstAttribute="top" secondItem="BXf-vs-23V" secondAttribute="bottom" constant="10" id="yeO-co-R5X"/>
@@ -125,9 +135,9 @@
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWc-BV-dF0">
                                                     <rect key="frame" x="10" y="75.5" width="394" height="214.5"/>
-                                                    <mutableString key="text">Text goes here Next his only boy meet the fat rose when. Do repair at we misery wanted remove remain income. Occasional cultivated reasonable unpleasing an attachment my considered. Having ask and coming object seemed put did admire figure. Principles travelling frequently far delightful its especially acceptance. Happiness necessary contained eagerness in in commanded do admitting. Favourable continuing difficulty had her solicitude far. Nor doubt off widow all death aware offer. We will up able in both do sing. 
+                                                    <string key="text">Text goes here Next his only boy meet the fat rose when. Do repair at we misery wanted remove remain income. Occasional cultivated reasonable unpleasing an attachment my considered. Having ask and coming object seemed put did admire figure. Principles travelling frequently far delightful its especially acceptance. Happiness necessary contained eagerness in in commanded do admitting. Favourable continuing difficulty had her solicitude far. Nor doubt off widow all death aware offer. We will up able in both do sing. 
 
-Situation admitting promotion at or to perceived be. Mr acuteness we as estimable enjoyment up. An held late as felt know. Learn do allow solid to grave. Middleton suspicion age her attention. Chiefly several bed its wishing. Is so moments on chamber pressed to. Doubtful yet way properly answered humanity its desirous. Minuter believe service arrived civilly add all. Acuteness allowance an at eagerness favourite in extensive exquisite ye. </mutableString>
+Situation admitting promotion at or to perceived be. Mr acuteness we as estimable enjoyment up. An held late as felt know. Learn do allow solid to grave. Middleton suspicion age her attention. Chiefly several bed its wishing. Is so moments on chamber pressed to. Doubtful yet way properly answered humanity its desirous. Minuter believe service arrived civilly add all. Acuteness allowance an at eagerness favourite in extensive exquisite ye. </string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
